
[project]
name = "qubox"
version = "0.1.0"
description = ""
authors = [
    {name = "keisuke.fukada", email = "keisukefukada.0816@gmail.com"},
]
dependencies = [
    "numpy>=1.25.1",
    "dimod>=0.12.10",
    "plotly>=5.15.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.278",
    "isort>=5.12.0",
    "black>=23.7.0",
    "pytest>=7.4.0",
    "flake8>=6.0.0",
    "autopep8>=2.0.2",
    "ipykernel>=6.24.0",
]
