[project]
name = "qubingx"
version = "0.1.0"
description = ""
authors = [
    {name = "keisuke.fukada", email = "keisukefukada.0816@gmail.com"},
]
dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "plotly>=5.18.0",
    "dimod>=0.12.13",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.27.1",
    "ruff>=0.1.6",
]
