[project]
name = "qubingx"
version = "0.1.0"
description = ""
authors = [
    {name = "keisuke.fukada", email = "keisukefukada.0816@gmail.com"},
]
dependencies = [
    "dwave-system>=1.24.0",
    "numpy>=1.26.2",
    "pandas>=2.2.2",
    "plotly>=5.18.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.27.1",
    "nbformat>=4.2.0",
    "ruff>=0.1.6",
    "pytest>=8.2.0",
    "pyright>=1.1.360",
    "networkx>=3.3",
    "matplotlib>=3.9.0",
]

[tool.ruff]
line-length = 100  # defaults to 88 like black
target-version = "py311"  # defaults to "py310"
indent-width = 4

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "S", # flake8-bandit
    "Q", # flake8-quotes
]
ignore=[
    "E501",
    "E741",
    "F403",
    "S311",
]

[tool.ruff.lint.isort]

[tool.ruff.format]

[tool.pdm.scripts]
format = "ruff format ./qubingx"
ruff_check = "ruff check --fix ./qubingx"
pyright = "pyright ./qubingx"
check = { composite = [
    "format", "ruff_check", "pyright"
]}

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ANN201",
    "N802",
    "ARG",
]
